# chess

./: .gitignore  README.md  makefile
.circleci/: config.yml
src/: Board.cpp  Board.h  Game.cpp  Game.h  Move.cpp  Move.h  Piece.cpp  Piece.h  Player.cpp  Player.h  Square.cpp  Square.h  board.cpp  board.h  game.cpp  game.h  main.cpp  move.cpp  move.h  piece.cpp  piece.h  player.cpp  player.h  square.cpp  square.h
test/: BoardTest.cpp  CMakeLists.txt  SquareTest.cpp  TestBoard.cpp  TestPiece.cpp  TestSquare.cpp  main.cpp  piecetest.cpp  test.cpp
